services/service_clusterip.yml
## ClusterIp service is mainly used for pod-to-pod communication
#
apiVersion: v1
kind: Service
metadata:
  name: back-end
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
  selector:
    app: myapp
    type: back-end
